src/static/room.css
/* ... */
.unread-message-line button.button-icon > img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.unread-message-line .unread-expand img {
  -webkit-transform: rotate(270deg);
  transform: rotate(270deg);
}
.unread-message.unread-expanded > .unread-message-line .unread-expand img {
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}
.unread-message:not(.has-replies) > .unread-message-line .unread-expand {
  display: none;
}
.unread-message.unread-message-hidden > .unread-message-line {
  display: none;
}
.unread-message.unread-expanded > .replies > .unread-message >
.unread-message-line {
  display: -webkit-flex;
  display: flex;
}
.unread-message:not(.unread-message-hidden) {
  border-left: 2px solid transparent;
  padding-left: 2px;
}
.unread-message.unread-message-ping {
  border-color: #c0c000;
}
.unread-message.unread-message-ping > .unread-message-line {
  background: rgba(192, 192, 0, 0.15);
}
.unread-message.unread-message-reply {
  border-color: #0040ff;
}
.unread-message.unread-message-reply > .unread-message-line {
  background: rgba(0, 64, 255, 0.15);
}
.unread-message.unread-message-activity {
  border-color: #808080;
}
.replies > .unread-message-line:not(.unread-message-hidden) {
  margin-top: 2px;
}

.sidebar.user-list-collapsed .sidebar-unread {
  max-height: none;
}

.content-wrapper.sidebar-pane .sidebar-unread.visible {
  display: -webkit-flex;
  display: flex;
}

.input-bar {
  display: -webkit-flex;
  display: flex;
  -webkit-align-content: stretch;
  align-content: stretch;
  width: 100%;
  margin: 5px 0;
  overflow: hidden;
  background: white;
  box-shadow: 0 0 5px #808080;
  line-height: 1.2;
  -webkit-transition: background 0.5s;
  transition: background 0.5s;
}
.input-bar .input-nick-sizer, .input-bar .input-nick,
.input-bar .input-message, .input-bar .input-message-sizer {
  display: block;
  margin: 0;
  border: 0;
  padding: 0;
  font: inherit;
}
.input-bar .input-info-cell {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
}
.input-bar .alert-container {
  display: table;
  margin: auto;
  padding: 1px 0;
  min-height: 1.2em;
  line-height: 0;
}
.input-bar .alert-container a {
  display: table-cell;
  width: 1.2em;
  height: 1.2em;
}
.input-bar .alert-container img {
  display: block;
  width: 100%;
  height: 100%;
}
.input-bar .input-nick-cell {
  position: relative;
}
.input-bar .input-nick-sizer {
  display: inline-block;
  padding: 1px 2px;
  white-space: pre;
  min-height: 1.2em;
  vertical-align: bottom;
  color: transparent;
  background: #c0c0c0;
}
.input-bar .input-nick-sizer {
  -webkit-transition: background 0.1s linear;
  transition: background 0.1s linear;
}
.input-bar .input-nick {
  position: absolute;
  top: 1px;
  left: 2px;
  min-width: 100%;
  color: inherit;
  background: transparent;
}
.input-bar .input-message-cell {
  position: relative;
  -webkit-flex-grow: 1;
  flex-grow: 1;
  padding: 1px 0 1px 0.25em;
  -webkit-transition: background 0.1s;
  transition: background 0.1s;
}
.input-bar .input-nick-prompt {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  max-width: 100%;
  height: 100%;
  border: 1px solid #808080;
  padding-right: 0.25em;
  background: white;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  z-index: 10;
}
.input-bar .input-nick-prompt img {
  width: 1.2em;
  height: 1.2em;
  vertical-align: bottom;
}
.input-bar .input-group {
  position: relative;
}
.input-bar .input-message, .input-bar .input-message-sizer {
  width: 100%;
  color: inherit;
  background: transparent;
  overflow: hidden;
  resize: none;
}
.input-bar .input-message-sizer {
  position: absolute;
  top: 0;
  visibility: hidden;
}

.input-bar.offline .input-message-cell {
  background: rgba(128, 128, 128, 0.3);
}
.input-bar input, .input-bar textarea {
  outline: none;
}

.offscreen-alert {
  visibility: hidden;
  opacity: 0.5;
}
.offscreen-alert.visible {
  visibility: visible;
}
.offscreen-alert.ping {
  opacity: 1;
}

.message > .replies > .input-bar:first-child {
  margin-top: 3px;
}
.message > .replies > .input-bar:last-child {
  margin-bottom: 3px;
}

.message-box {
  position: relative;
  padding-left: 3.5em;
  overflow: auto;
}
.message-box.notimes {
  padding-left: 0;
}
.message-box.notimes .message > .line time {
  display: none;
}
.message-box.notimes .input-bar .input-info-cell {
  display: none;
}

.message-pane {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-y: scroll;
  overflow-x: auto;
}
.message-pane > .message-box {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-justify-content: flex-end;
  flex-direction: column;
  justify-content: flex-end;
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px 5px 5px 3.5em;
  overflow: visible;
}
.message-pane > .message-box.notimes {
  padding-left: 5px;
}

.message-pane > .message-box .message,
.message-pane > .message-box .input-bar {
  min-width: 10em;
}
.message-pane > .message-box > .message:last-child {
  margin-bottom: 2px;
}

.popups-wrapper, .windows-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
}
.windows-wrapper {
  pointer-events: none;
}
.windows-wrapper > * {
  pointer-events: auto;
}
.popups-wrapper.empty, .popups-wrapper.hidden,
.windows-wrapper.empty {
  display: none;
}

.popups-wrapper {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
}

.popups-menu {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  border-bottom: 2px solid black;
  background: white;
  z-index: 1100;
}
.popups-menu > * {
  line-height: 1.2;
  margin: auto 0.4em;
}
.popups-menu > .big-text {
  font-size: 1.5em;
}
.popups-menu > .filler {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  margin: 0;
}
/* ... */

